Adding about text and Changed wether display data

--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -8,6 +8,7 @@
     <body>
         <div class="main-content">
             {{>header}}
+            <p>This site was created by Gururaj. It uses data from mapbox.com and weatherstack.com to fetch weather data.</p>
             <img class="portrait" src="/img/harshini.jpg">
         </div>        
         {{>footer}}
